--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .card {
-    background: color(white);
+    background:color rgb(255 250 250);
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* Sombra más prominente */
     padding: 40px; /* Aumenta el padding para más espacio */
